# recon3d-server

./: .env.example  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-loc.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/core/common/: apps.py
backend/core/common/api/: permissions.py  serializers.py  urls.py  views.py
backend/core/common_api/: apps.py  serializers.py  urls.py  views.py
backend/core/core/: celery.py  config.py  settings.py  swagger.py  urls.py
backend/core/identification/: models.py  tasks.py
backend/core/identification/api/: serializers.py  urls.py  views.py
backend/core/identification/migrations/: 0001_initial.py  0002_remove_identification_state_identification_status.py  0003_identification_reconstruction.py
backend/core/identification/utils/: room_number_detector.py
backend/core/mainpage/: admin.py  apps.py  models.py  urls.py  views.py
backend/core/mainpage/migrations/: 0001_initial.py
backend/core/mesh_render/: apps.py  urls.py  views.py
backend/core/mobile/: apps.py  urls.py
backend/core/reconstruction/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/core/reconstruction/api/: __init__.py  serializers.py  urls.py  views.py
backend/core/reconstruction/migrations/: 0001_initial.py  0002_houghpreviewfile.py  0003_reconstruction.py  0004_remove_reconstruction_is_saved_reconstruction_name.py  0005_alter_reconstruction_saved_at.py  0006_reconstruction_status_and_more.py  0007_reconstruction_plan_signs.py  0008_reconstruction_rooms.py  0009_remove_reconstruction_plan_signs.py
backend/core/reconstruction/utils/: plan2reconstruction.py
backend/core/upload_files/: models.py
backend/core/upload_files/api/: serializers.py  urls.py  views.py
backend/core/upload_files/migrations/: 0001_initial.py  0002_alter_uploadedfile_source_type.py
backend/docker/app/: rollback-migration.sh  run.sh  show-migrations.sh
backend/docker/nginx/: nginx.conf
nginx/: Dockerfile  (+1 more)
(+8 files in other folders)
